tests/ui/generic-associated-types/issue-102335-gat.stderr
error[E0229]: associated item constraints are not allowed here
  --> $DIR/issue-102335-gat.rs:2:21
   |
LL |     type A: S<C<(), i32 = ()> = ()>;
   |                     ^^^^^^^^ associated item constraint not allowed here
   |
help: consider removing this associated item binding
   |
LL -     type A: S<C<(), i32 = ()> = ()>;
LL +     type A: S<C<()> = ()>;
   |

error[E0229]: associated item constraints are not allowed here
  --> $DIR/issue-102335-gat.rs:2:21
   |
LL |     type A: S<C<(), i32 = ()> = ()>;
   |                     ^^^^^^^^ associated item constraint not allowed here
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: consider removing this associated item binding
   |
LL -     type A: S<C<(), i32 = ()> = ()>;
LL +     type A: S<C<()> = ()>;
   |

error[E0277]: the trait bound `(): Q` is not satisfied
  --> $DIR/issue-102335-gat.rs:2:15
   |
LL |     type A: S<C<(), i32 = ()> = ()>;
   |               ^^^^^^^^^^^^^^^^^^^^ the trait `Q` is not implemented for `()`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/issue-102335-gat.rs:8:1
   |
LL | trait Q {}
   | ^^^^^^^

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0229, E0277.
For more information about an error, try `rustc --explain E0229`.
